gcc/testsuite/rust/rustc/ui/issues/issue-73541-1.rs
// edition:2018

fn main() {
    'a: loop {
        async {
            loop {
                continue 'a
// { dg-error ".E0767." "" { target *-*-* } .-1 }
            }
        };
    }
}

